Fix issues with PR
