# sandbox/modules/identity/src/main/java/org/opensearch/identity/rest/permission/put/PutPermissionAction.java
@@ -6,7 +6,7 @@
  * compatible open source license.
  */
 
-package org.opensearch.identity.rest.action.permission.put;
+package org.opensearch.identity.rest.permission.put;
 
 import org.opensearch.action.ActionType;
 
