# sandbox/modules/identity/src/main/java/org/opensearch/identity/rest/service/PermissionService.java
@@ -19,8 +19,8 @@ import org.opensearch.identity.ConfigConstants;
 import org.opensearch.identity.authz.OpenSearchPermission;
 import org.opensearch.identity.authz.PermissionFactory;
 import org.opensearch.identity.authz.PermissionStorage;
-import org.opensearch.identity.rest.action.permission.put.PutPermissionResponse;
-import org.opensearch.identity.rest.action.permission.put.PutPermissionResponseInfo;
+import org.opensearch.identity.rest.permission.put.PutPermissionResponse;
+import org.opensearch.identity.rest.permission.put.PutPermissionResponseInfo;
 import org.opensearch.index.IndexNotFoundException;
 import org.opensearch.transport.TransportService;
 import org.opensearch.identity.utils.ErrorType;
@@ -57,18 +57,18 @@ public class PermissionService {
         return true;
     }
 
-    public void putPermission(String principal, String permissionString, ActionListener<PutPermissionResponse> listener) {
+    public void putPermission(String principal, String permission, ActionListener<PutPermissionResponse> listener) {
 
         if (!ensureIndexExists()) {
             listener.onFailure(new IndexNotFoundException(ErrorType.IDENTITY_NOT_INITIALIZED.getMessage()));
             return;
         }
 
-        OpenSearchPermission newPermission = PermissionFactory.createPermission(permissionString);
+        OpenSearchPermission newPermission = PermissionFactory.createPermission(permission);
         List<OpenSearchPermission> permissionList = Arrays.asList(newPermission);
 
         PermissionStorage.put(principal, permissionList);
-        PutPermissionResponseInfo responseInfo = new PutPermissionResponseInfo(true, principal, permissionString);
+        PutPermissionResponseInfo responseInfo = new PutPermissionResponseInfo(true, principal, permission);
         PutPermissionResponse response = new PutPermissionResponse(responseInfo);
         listener.onResponse(response);
     }
